# discoverydb-backend

./: .gitignore  Cargo.toml  README.md  Rocket.toml  setup-db.sql  test.http
src/: macros.rs  main.rs
src/create/: mod.rs  server.rs
src/fetch/: all.rs  mod.rs  one.rs
src/manage/: mod.rs
src/result/: mod.rs  result.rs
src/schemas/: bot.rs  client.rs  conversions.rs  database.rs  listings.rs  mod.rs  plugin.rs  report.rs  server.rs  theme.rs
