[package]
name = "discoverydb-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
rocket = { version = "0.5.1", features = ["json"] }
rocket_db_pools = { version = "0.2.0", features = ["sqlx_sqlite"] }
serde = { version = "1.0.219", features = ["derive"] }
sqlx = { version = "0.7.4", features = ["macros"] }
